--- a/styles.css
+++ b/styles.css
@@ -167,7 +167,7 @@
   color: #495057;
 }
 
-.mensaje-encriptado button{
+#btn-copy{
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
@@ -185,6 +185,14 @@
   line-height: 19px;
   text-align: center;
   color: black;
+  transition: 400ms;
+}
+
+#btn-copy:hover{
+  width: 63%;
+  font-size: 20px;
+  background: #0a3871;
+  
 }
 
 .encriptado img {
